force-app/main/default/objects/Account_Setting__mdt/Account_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Language of User key can be used to send email to the end of user</description>
    <label>Account Setting</label>
    <pluralLabel>Account Settings</pluralLabel>
</CustomObject>