force-app/main/default/objects/Account_Setting__mdt/fields/DomainEmail__c.field-meta.xml
<CustomField>
    <fullName>DomainEmail__c</fullName>
    <description>Name of Domain Email</description>
    <label>Domain Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>