force-app/main/default/objects/Account_Setting__mdt/fields/Indicative__c.field-meta.xml
<CustomField>
    <fullName>Indicative__c</fullName>
    <description>Indicative phone</description>
    <label>Indicative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>