force-app/main/default/objects/Account_Setting__mdt/fields/MarketingCountry__c.field-meta.xml
<CustomField>
    <fullName>MarketingCountry__c</fullName>
    <description>Marketing Country</description>
    <label>MarketingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>