force-app/main/default/objects/Account_Setting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of country</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>